rm projects tab